2011-01-01 (0.4-9) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fixed the problem of out of range random seed 
    when generating initial seed for OpenBUGS.
  (thanks to Wen Huang)

2010-10-19 (0.4-8) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fixed the problem when generating intial files.
  (thanks to Dr Stefano Conti)

2010-10-15 (0.4-7) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fixed the log.txt generating problem in Linux
  the log.txt file is necessary to get the DIC output.
  (thanks to Dr Stefano Conti)
  
2010-09-28 (0.4-6) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fixed the loading coda file in getBugsOutput 
  function when data is saved from OpenBugs using
  the interface.

2010-09-28 (0.4-5) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Input the generation of the "rbugs" class
  to the getBugsOutput function.


2010-07-07 (0.4-4) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fix the debug and dic functionality for
  OpenBUGS 
  * Corrected the wine script generation

2010-06-17 (0.4-3) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Included the rbugs2coda function to convert
  the rbugs output to a coda format.

2010-06-09 (0.4-2) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Set seed to be random if not specified by the
  user.
  * Fixed the cleanBugsWorkingDir function to delete
   the workingdir files when selected TRUE.
  * Changed the output design.
  * Changed the linbugs variables to OpenBugs.


2010-05-27 (0.4-1) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

	* Fixed the support for OpenBUGS on windows
	with the recent release of OpenBUGS310.
	* Added the example for running OpenBugs on 
	windows with the school and pump data.