@@ -1,7 +1,7 @@
 Package: rbugs
 Title: Fusing R and OpenBugs
-Date: 2011-01-01
-Version: 0.4-9
+Date: 2011-02-19
+Version: 0.5-1
 Author: Jun Yan <jyan@stat.uconn.edu> and Marcos Prates
         <marcos.prates@uconn.edu>
 Description: Functions to prepare files needed for running BUGS in
@@ -11,5 +11,5 @@ Suggests: coda (>= 0.13-5)
 Maintainer: Marcos Prates <marcos.prates@uconn.edu>
 License: GPL (>= 3.0)
 Repository: CRAN
-Date/Publication: 2011-01-03 12:36:01
-Packaged: 2011-01-01 20:35:46 UTC; mprates
+Date/Publication: 2011-02-20 09:05:50
+Packaged: 2011-02-19 17:54:49 UTC; mprates
